--- a/notebooks/implement_meansk.ipynb
+++ b/notebooks/implement_meansk.ipynb
@@ -62,16 +62,16 @@
     {
      "data": {
       "text/plain": [
-       "{0: array([100, 102, 103, 104, 105, 107, 108, 109, 112, 115, 116, 117, 118,\n",
-       "        120, 122, 124, 125, 128, 129, 130, 131, 132, 135, 136, 137, 139,\n",
-       "        140, 141, 143, 144, 145, 148]),\n",
-       " 1: array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "{0: array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
        "        17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
        "        34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]),\n",
-       " 2: array([ 50,  51,  52,  54,  56,  58,  63,  65,  68,  70,  72,  73,  74,\n",
+       " 1: array([ 50,  51,  52,  54,  56,  58,  63,  65,  68,  70,  72,  73,  74,\n",
        "         75,  76,  77,  78,  83,  85,  86,  87,  91,  97, 101, 110, 111,\n",
        "        113, 114, 119, 121, 123, 126, 127, 133, 134, 138, 142, 146, 147,\n",
        "        149]),\n",
+       " 2: array([100, 102, 103, 104, 105, 107, 108, 109, 112, 115, 116, 117, 118,\n",
+       "        120, 122, 124, 125, 128, 129, 130, 131, 132, 135, 136, 137, 139,\n",
+       "        140, 141, 143, 144, 145, 148]),\n",
        " 3: array([ 53,  55,  57,  59,  60,  61,  62,  64,  66,  67,  69,  71,  79,\n",
        "         80,  81,  82,  84,  88,  89,  90,  92,  93,  94,  95,  96,  98,\n",
        "         99, 106])}"
@@ -744,55 +744,7 @@
     {
      "data": {
       "text/plain": [
-       "{0: [(10.652999999999999, 92.361, 6.2, 24.0),\n",
-       "  (12.99, 92.525, 5.5, 30.0),\n",
-       "  (10.413, 92.869, 5.9, 34.0),\n",
-       "  (11.005, 91.824, 6.6, 17.0),\n",
-       "  (10.894, 91.777, 5.9, 17.0),\n",
-       "  (10.847000000000001, 91.712, 6.1, 15.0),\n",
-       "  (11.055, 91.814, 6.2, 20.0),\n",
-       "  (10.947000000000001, 91.711, 5.7, 13.0),\n",
-       "  (10.833, 91.711, 5.5, 26.7),\n",
-       "  (34.203, 73.9, 5.5, 12.0),\n",
-       "  (11.132, 93.471, 6.5, 112.0)],\n",
-       " 1: [(25.976999999999997, 95.34, 7.0, 76.1),\n",
-       "  (26.469, 93.12700000000001, 5.5, 35.0),\n",
-       "  (25.206, 94.708, 5.7, 62.3),\n",
-       "  (24.281, 93.54799999999999, 5.9, 30.0),\n",
-       "  (10.686, 92.583, 5.7, 46.0),\n",
-       "  (11.43, 92.346, 6.0, 25.0),\n",
-       "  (11.446, 92.35700000000001, 6.1, 33.0)],\n",
-       " 2: [(24.256999999999998, 93.545, 6.0, 33.0),\n",
-       "  (24.641, 92.891, 6.0, 22.6),\n",
-       "  (32.128, 76.374, 5.5, 33.0),\n",
-       "  (31.049, 77.997, 5.5, 33.0),\n",
-       "  (25.271, 94.20200000000001, 6.3, 49.5),\n",
-       "  (25.149, 95.12700000000001, 7.3, 90.5),\n",
-       "  (25.17, 94.652, 5.6, 66.5),\n",
-       "  (24.471999999999998, 92.505, 5.5, 33.0),\n",
-       "  (30.78, 78.774, 6.8, 10.3),\n",
-       "  (24.015, 93.986, 5.5, 72.1)],\n",
-       " 3: [(18.066, 76.45100000000001, 6.2, 6.8),\n",
-       "  (27.635, 92.37100000000001, 5.5, 39.3),\n",
-       "  (24.894000000000002, 92.25, 6.0, 34.9),\n",
-       "  (23.083000000000002, 80.041, 5.8, 36.0),\n",
-       "  (22.212, 92.70200000000001, 6.1, 54.4),\n",
-       "  (30.511999999999997, 79.403, 6.6, 15.0),\n",
-       "  (24.908, 93.678, 5.6, 66.4),\n",
-       "  (21.691999999999997, 92.90799999999999, 5.5, 33.0),\n",
-       "  (23.419, 70.232, 7.7, 16.0),\n",
-       "  (23.316, 69.98100000000001, 5.5, 10.0),\n",
-       "  (23.506999999999998, 70.517, 5.8, 10.0),\n",
-       "  (12.224, 93.352, 5.9, 96.4)],\n",
-       " 4: [(21.747, 92.99, 5.7, 40.0),\n",
-       "  (12.796, 93.016, 5.5, 33.0),\n",
-       "  (12.863, 93.07, 5.6, 33.0),\n",
-       "  (30.029, 80.31, 5.9, 33.0),\n",
-       "  (17.179000000000002, 73.707, 5.5, 33.0),\n",
-       "  (27.394000000000002, 88.75200000000001, 6.1, 17.0),\n",
-       "  (12.198, 92.855, 5.7, 33.0),\n",
-       "  (18.519000000000002, 86.27600000000001, 5.5, 24.0)],\n",
-       " 5: [(12.700999999999999, 92.85600000000001, 5.8, 33.0),\n",
+       "{0: [(12.700999999999999, 92.85600000000001, 5.8, 33.0),\n",
        "  (12.517999999999999, 92.564, 5.9, 33.0),\n",
        "  (22.854, 92.306, 5.7, 10.0),\n",
        "  (22.825, 92.34299999999999, 5.5, 10.0),\n",
@@ -814,13 +766,30 @@
        "  (11.86, 92.37200000000001, 6.1, 19.0),\n",
        "  (23.776999999999997, 70.899, 5.5, 10.0),\n",
        "  (23.322, 70.477, 5.5, 10.0)],\n",
-       " 6: [(27.73, 88.155, 6.9, 50.0),\n",
+       " 1: [(25.976999999999997, 95.34, 7.0, 76.1),\n",
+       "  (26.469, 93.12700000000001, 5.5, 35.0),\n",
+       "  (25.206, 94.708, 5.7, 62.3),\n",
+       "  (24.281, 93.54799999999999, 5.9, 30.0),\n",
+       "  (10.686, 92.583, 5.7, 46.0),\n",
+       "  (11.43, 92.346, 6.0, 25.0),\n",
+       "  (11.446, 92.35700000000001, 6.1, 33.0)],\n",
+       " 2: [(24.256999999999998, 93.545, 6.0, 33.0),\n",
+       "  (24.641, 92.891, 6.0, 22.6),\n",
+       "  (32.128, 76.374, 5.5, 33.0),\n",
+       "  (31.049, 77.997, 5.5, 33.0),\n",
+       "  (25.271, 94.20200000000001, 6.3, 49.5),\n",
+       "  (25.149, 95.12700000000001, 7.3, 90.5),\n",
+       "  (25.17, 94.652, 5.6, 66.5),\n",
+       "  (24.471999999999998, 92.505, 5.5, 33.0),\n",
+       "  (30.78, 78.774, 6.8, 10.3),\n",
+       "  (24.015, 93.986, 5.5, 72.1)],\n",
+       " 3: [(27.73, 88.155, 6.9, 50.0),\n",
        "  (25.592, 94.696, 5.6, 58.0),\n",
        "  (25.329, 95.04799999999999, 5.8, 93.0),\n",
        "  (33.061, 75.863, 5.7, 15.0),\n",
        "  (23.5081, 93.5148, 5.6, 49.0),\n",
        "  (24.8036, 93.6505, 6.7, 55.0)],\n",
-       " 7: [(25.011, 94.186, 5.6, 55.0),\n",
+       " 4: [(25.011, 94.186, 5.6, 55.0),\n",
        "  (12.01, 92.48299999999999, 5.8, 10.0),\n",
        "  (29.706, 80.935, 6.3, 25.0),\n",
        "  (28.565, 78.961, 5.6, 27.0),\n",
@@ -829,7 +798,38 @@
        "  (33.617, 75.333, 5.5, 20.0),\n",
        "  (28.463, 94.24799999999999, 5.7, 16.9),\n",
        "  (17.412, 73.885, 6.6, 15.0),\n",
-       "  (17.747, 80.775, 5.7, 20.0)]}"
+       "  (17.747, 80.775, 5.7, 20.0)],\n",
+       " 5: [(21.747, 92.99, 5.7, 40.0),\n",
+       "  (12.796, 93.016, 5.5, 33.0),\n",
+       "  (12.863, 93.07, 5.6, 33.0),\n",
+       "  (30.029, 80.31, 5.9, 33.0),\n",
+       "  (17.179000000000002, 73.707, 5.5, 33.0),\n",
+       "  (27.394000000000002, 88.75200000000001, 6.1, 17.0),\n",
+       "  (12.198, 92.855, 5.7, 33.0),\n",
+       "  (18.519000000000002, 86.27600000000001, 5.5, 24.0)],\n",
+       " 6: [(18.066, 76.45100000000001, 6.2, 6.8),\n",
+       "  (27.635, 92.37100000000001, 5.5, 39.3),\n",
+       "  (24.894000000000002, 92.25, 6.0, 34.9),\n",
+       "  (23.083000000000002, 80.041, 5.8, 36.0),\n",
+       "  (22.212, 92.70200000000001, 6.1, 54.4),\n",
+       "  (30.511999999999997, 79.403, 6.6, 15.0),\n",
+       "  (24.908, 93.678, 5.6, 66.4),\n",
+       "  (21.691999999999997, 92.90799999999999, 5.5, 33.0),\n",
+       "  (23.419, 70.232, 7.7, 16.0),\n",
+       "  (23.316, 69.98100000000001, 5.5, 10.0),\n",
+       "  (23.506999999999998, 70.517, 5.8, 10.0),\n",
+       "  (12.224, 93.352, 5.9, 96.4)],\n",
+       " 7: [(10.652999999999999, 92.361, 6.2, 24.0),\n",
+       "  (12.99, 92.525, 5.5, 30.0),\n",
+       "  (10.413, 92.869, 5.9, 34.0),\n",
+       "  (11.005, 91.824, 6.6, 17.0),\n",
+       "  (10.894, 91.777, 5.9, 17.0),\n",
+       "  (10.847000000000001, 91.712, 6.1, 15.0),\n",
+       "  (11.055, 91.814, 6.2, 20.0),\n",
+       "  (10.947000000000001, 91.711, 5.7, 13.0),\n",
+       "  (10.833, 91.711, 5.5, 26.7),\n",
+       "  (34.203, 73.9, 5.5, 12.0),\n",
+       "  (11.132, 93.471, 6.5, 112.0)]}"
       ]
      },
      "execution_count": 17,
