got clusters accordingly

--- a/notebooks/implement_meansk.ipynb
+++ b/notebooks/implement_meansk.ipynb
@@ -62,13 +62,13 @@
     {
      "data": {
       "text/plain": [
-       "{0: array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
-       "        17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
-       "        34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]),\n",
-       " 1: array([ 50,  51,  52,  54,  56,  58,  63,  65,  68,  70,  72,  73,  74,\n",
+       "{0: array([ 50,  51,  52,  54,  56,  58,  63,  65,  68,  70,  72,  73,  74,\n",
        "         75,  76,  77,  78,  83,  85,  86,  87,  91,  97, 101, 110, 111,\n",
        "        113, 114, 119, 121, 123, 126, 127, 133, 134, 138, 142, 146, 147,\n",
        "        149]),\n",
+       " 1: array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "        17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+       "        34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49]),\n",
        " 2: array([100, 102, 103, 104, 105, 107, 108, 109, 112, 115, 116, 117, 118,\n",
        "        120, 122, 124, 125, 128, 129, 130, 131, 132, 135, 136, 137, 139,\n",
        "        140, 141, 143, 144, 145, 148]),\n",
@@ -526,21 +526,6 @@
        "      <th></th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Depth</th>\n",
-       "      <th>Depth Error</th>\n",
-       "      <th>Depth Seismic Stations</th>\n",
-       "      <th>Magnitude</th>\n",
-       "      <th>Magnitude Type</th>\n",
-       "      <th>Magnitude Error</th>\n",
-       "      <th>Magnitude Seismic Stations</th>\n",
-       "      <th>Azimuthal Gap</th>\n",
-       "      <th>Horizontal Distance</th>\n",
-       "      <th>Horizontal Error</th>\n",
-       "      <th>Root Mean Square</th>\n",
-       "      <th>Status</th>\n",
-       "      <th>Place</th>\n",
-       "      <th>TimeStamp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -548,134 +533,38 @@
        "      <th>58</th>\n",
        "      <td>25.011</td>\n",
        "      <td>94.186</td>\n",
-       "      <td>0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>37.6</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30</td>\n",
-       "      <td>-153623003.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>402</th>\n",
        "      <td>12.010</td>\n",
        "      <td>92.483</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>37.6</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>35</td>\n",
-       "      <td>-118190867.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>468</th>\n",
        "      <td>29.706</td>\n",
        "      <td>80.935</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>37.6</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>-110917841.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>494</th>\n",
        "      <td>28.565</td>\n",
        "      <td>78.961</td>\n",
-       "      <td>0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>37.6</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>-106715668.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>528</th>\n",
        "      <td>27.419</td>\n",
        "      <td>92.576</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14.4</td>\n",
-       "      <td>3.8</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>37.6</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>-103076343.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Latitude  Longitude  Type  Depth  Depth Error  Depth Seismic Stations  \\\n",
-       "58     25.011     94.186     0   55.0          3.8                    68.0   \n",
-       "402    12.010     92.483     0   10.0          3.8                    68.0   \n",
-       "468    29.706     80.935     0   25.0          3.8                    68.0   \n",
-       "494    28.565     78.961     0   27.0          3.8                    68.0   \n",
-       "528    27.419     92.576     0   14.4          3.8                    68.0   \n",
-       "\n",
-       "     Magnitude  Magnitude Type  Magnitude Error  Magnitude Seismic Stations  \\\n",
-       "58         5.6               2             0.05                        61.0   \n",
-       "402        5.8               2             0.05                        61.0   \n",
-       "468        6.3               2             0.05                        61.0   \n",
-       "494        5.6               2             0.05                        61.0   \n",
-       "528        5.9               2             0.05                        61.0   \n",
-       "\n",
-       "     Azimuthal Gap  Horizontal Distance  Horizontal Error  Root Mean Square  \\\n",
-       "58            37.6                 2.55               7.3               1.0   \n",
-       "402           37.6                 2.55               7.3               1.0   \n",
-       "468           37.6                 2.55               7.3               1.0   \n",
-       "494           37.6                 2.55               7.3               1.0   \n",
-       "528           37.6                 2.55               7.3               1.0   \n",
-       "\n",
-       "     Status  Place    TimeStamp  \n",
-       "58        0     30 -153623003.0  \n",
-       "402       0     35 -118190867.0  \n",
-       "468       0      9 -110917841.0  \n",
-       "494       0     26 -106715668.0  \n",
-       "528       0      7 -103076343.0  "
+       "     Latitude  Longitude\n",
+       "58     25.011     94.186\n",
+       "402    12.010     92.483\n",
+       "468    29.706     80.935\n",
+       "494    28.565     78.961\n",
+       "528    27.419     92.576"
       ]
      },
      "execution_count": 13,
@@ -684,6 +573,7 @@
     }
    ],
    "source": [
+    "dummy_df = dummy_df[['Latitude', 'Longitude']]\n",
     "dummy_df.head()"
    ]
   },
@@ -731,7 +621,7 @@
     "for i, j in quake_zones.items():\n",
     "    z_lls = []\n",
     "    for v in list(j):\n",
-    "        s_ll = (q_vals[v][0], q_vals[v][1], q_vals[v][6], q_vals[v][3])\n",
+    "        s_ll = (q_vals[v][0], q_vals[v][1])\n",
     "        z_lls.append(s_ll)\n",
     "    q_z[i] = z_lls"
    ]
@@ -744,92 +634,91 @@
     {
      "data": {
       "text/plain": [
-       "{0: [(12.700999999999999, 92.85600000000001, 5.8, 33.0),\n",
-       "  (12.517999999999999, 92.564, 5.9, 33.0),\n",
-       "  (22.854, 92.306, 5.7, 10.0),\n",
-       "  (22.825, 92.34299999999999, 5.5, 10.0),\n",
-       "  (12.124, 93.53, 6.0, 100.2),\n",
-       "  (12.959000000000001, 93.135, 5.5, 38.2),\n",
-       "  (12.321, 92.499, 5.7, 26.8),\n",
-       "  (12.183, 92.936, 5.8, 38.5),\n",
-       "  (12.504000000000001, 92.604, 5.8, 30.0),\n",
-       "  (10.984000000000002, 92.28200000000001, 5.5, 23.5),\n",
-       "  (12.982000000000001, 92.395, 5.8, 23.7),\n",
-       "  (12.35, 92.469, 5.6, 19.0),\n",
-       "  (11.585999999999999, 92.499, 5.5, 25.8),\n",
-       "  (12.237, 92.515, 5.7, 30.0),\n",
-       "  (10.672, 92.36200000000001, 6.1, 23.2),\n",
-       "  (10.905999999999999, 91.795, 5.5, 10.5),\n",
-       "  (10.527999999999999, 92.28200000000001, 5.5, 22.5),\n",
-       "  (10.829, 91.772, 5.5, 30.0),\n",
-       "  (10.350999999999999, 92.90299999999999, 5.5, 49.6),\n",
-       "  (11.86, 92.37200000000001, 6.1, 19.0),\n",
-       "  (23.776999999999997, 70.899, 5.5, 10.0),\n",
-       "  (23.322, 70.477, 5.5, 10.0)],\n",
-       " 1: [(25.976999999999997, 95.34, 7.0, 76.1),\n",
-       "  (26.469, 93.12700000000001, 5.5, 35.0),\n",
-       "  (25.206, 94.708, 5.7, 62.3),\n",
-       "  (24.281, 93.54799999999999, 5.9, 30.0),\n",
-       "  (10.686, 92.583, 5.7, 46.0),\n",
-       "  (11.43, 92.346, 6.0, 25.0),\n",
-       "  (11.446, 92.35700000000001, 6.1, 33.0)],\n",
-       " 2: [(24.256999999999998, 93.545, 6.0, 33.0),\n",
-       "  (24.641, 92.891, 6.0, 22.6),\n",
-       "  (32.128, 76.374, 5.5, 33.0),\n",
-       "  (31.049, 77.997, 5.5, 33.0),\n",
-       "  (25.271, 94.20200000000001, 6.3, 49.5),\n",
-       "  (25.149, 95.12700000000001, 7.3, 90.5),\n",
-       "  (25.17, 94.652, 5.6, 66.5),\n",
-       "  (24.471999999999998, 92.505, 5.5, 33.0),\n",
-       "  (30.78, 78.774, 6.8, 10.3),\n",
-       "  (24.015, 93.986, 5.5, 72.1)],\n",
-       " 3: [(27.73, 88.155, 6.9, 50.0),\n",
-       "  (25.592, 94.696, 5.6, 58.0),\n",
-       "  (25.329, 95.04799999999999, 5.8, 93.0),\n",
-       "  (33.061, 75.863, 5.7, 15.0),\n",
-       "  (23.5081, 93.5148, 5.6, 49.0),\n",
-       "  (24.8036, 93.6505, 6.7, 55.0)],\n",
-       " 4: [(25.011, 94.186, 5.6, 55.0),\n",
-       "  (12.01, 92.48299999999999, 5.8, 10.0),\n",
-       "  (29.706, 80.935, 6.3, 25.0),\n",
-       "  (28.565, 78.961, 5.6, 27.0),\n",
-       "  (27.419, 92.57600000000001, 5.9, 14.4),\n",
-       "  (26.107, 96.115, 5.6, 25.0),\n",
-       "  (33.617, 75.333, 5.5, 20.0),\n",
-       "  (28.463, 94.24799999999999, 5.7, 16.9),\n",
-       "  (17.412, 73.885, 6.6, 15.0),\n",
-       "  (17.747, 80.775, 5.7, 20.0)],\n",
-       " 5: [(21.747, 92.99, 5.7, 40.0),\n",
-       "  (12.796, 93.016, 5.5, 33.0),\n",
-       "  (12.863, 93.07, 5.6, 33.0),\n",
-       "  (30.029, 80.31, 5.9, 33.0),\n",
-       "  (17.179000000000002, 73.707, 5.5, 33.0),\n",
-       "  (27.394000000000002, 88.75200000000001, 6.1, 17.0),\n",
-       "  (12.198, 92.855, 5.7, 33.0),\n",
-       "  (18.519000000000002, 86.27600000000001, 5.5, 24.0)],\n",
-       " 6: [(18.066, 76.45100000000001, 6.2, 6.8),\n",
-       "  (27.635, 92.37100000000001, 5.5, 39.3),\n",
-       "  (24.894000000000002, 92.25, 6.0, 34.9),\n",
-       "  (23.083000000000002, 80.041, 5.8, 36.0),\n",
-       "  (22.212, 92.70200000000001, 6.1, 54.4),\n",
-       "  (30.511999999999997, 79.403, 6.6, 15.0),\n",
-       "  (24.908, 93.678, 5.6, 66.4),\n",
-       "  (21.691999999999997, 92.90799999999999, 5.5, 33.0),\n",
-       "  (23.419, 70.232, 7.7, 16.0),\n",
-       "  (23.316, 69.98100000000001, 5.5, 10.0),\n",
-       "  (23.506999999999998, 70.517, 5.8, 10.0),\n",
-       "  (12.224, 93.352, 5.9, 96.4)],\n",
-       " 7: [(10.652999999999999, 92.361, 6.2, 24.0),\n",
-       "  (12.99, 92.525, 5.5, 30.0),\n",
-       "  (10.413, 92.869, 5.9, 34.0),\n",
-       "  (11.005, 91.824, 6.6, 17.0),\n",
-       "  (10.894, 91.777, 5.9, 17.0),\n",
-       "  (10.847000000000001, 91.712, 6.1, 15.0),\n",
-       "  (11.055, 91.814, 6.2, 20.0),\n",
-       "  (10.947000000000001, 91.711, 5.7, 13.0),\n",
-       "  (10.833, 91.711, 5.5, 26.7),\n",
-       "  (34.203, 73.9, 5.5, 12.0),\n",
-       "  (11.132, 93.471, 6.5, 112.0)]}"
+       "{0: [(23.419, 70.232),\n",
+       "  (23.316, 69.98100000000001),\n",
+       "  (23.506999999999998, 70.517),\n",
+       "  (23.776999999999997, 70.899),\n",
+       "  (23.322, 70.477)],\n",
+       " 1: [(12.01, 92.48299999999999),\n",
+       "  (10.686, 92.583),\n",
+       "  (11.43, 92.346),\n",
+       "  (11.446, 92.35700000000001),\n",
+       "  (12.796, 93.016),\n",
+       "  (12.863, 93.07),\n",
+       "  (12.198, 92.855),\n",
+       "  (12.224, 93.352),\n",
+       "  (12.700999999999999, 92.85600000000001),\n",
+       "  (12.517999999999999, 92.564),\n",
+       "  (12.124, 93.53),\n",
+       "  (12.959000000000001, 93.135),\n",
+       "  (12.321, 92.499),\n",
+       "  (12.183, 92.936),\n",
+       "  (12.504000000000001, 92.604),\n",
+       "  (10.984000000000002, 92.28200000000001),\n",
+       "  (12.982000000000001, 92.395),\n",
+       "  (12.35, 92.469),\n",
+       "  (11.585999999999999, 92.499),\n",
+       "  (12.237, 92.515),\n",
+       "  (10.672, 92.36200000000001),\n",
+       "  (10.905999999999999, 91.795),\n",
+       "  (10.527999999999999, 92.28200000000001),\n",
+       "  (10.829, 91.772),\n",
+       "  (10.350999999999999, 92.90299999999999),\n",
+       "  (11.86, 92.37200000000001),\n",
+       "  (10.652999999999999, 92.361),\n",
+       "  (12.99, 92.525),\n",
+       "  (10.413, 92.869),\n",
+       "  (11.005, 91.824),\n",
+       "  (10.894, 91.777),\n",
+       "  (10.847000000000001, 91.712),\n",
+       "  (11.055, 91.814),\n",
+       "  (10.947000000000001, 91.711),\n",
+       "  (10.833, 91.711),\n",
+       "  (11.132, 93.471)],\n",
+       " 2: [(25.011, 94.186),\n",
+       "  (27.419, 92.57600000000001),\n",
+       "  (26.107, 96.115),\n",
+       "  (28.463, 94.24799999999999),\n",
+       "  (25.976999999999997, 95.34),\n",
+       "  (26.469, 93.12700000000001),\n",
+       "  (25.206, 94.708),\n",
+       "  (25.271, 94.20200000000001),\n",
+       "  (25.149, 95.12700000000001),\n",
+       "  (25.17, 94.652),\n",
+       "  (27.635, 92.37100000000001),\n",
+       "  (24.908, 93.678),\n",
+       "  (25.592, 94.696),\n",
+       "  (25.329, 95.04799999999999),\n",
+       "  (24.8036, 93.6505)],\n",
+       " 3: [(29.706, 80.935),\n",
+       "  (28.565, 78.961),\n",
+       "  (33.617, 75.333),\n",
+       "  (30.029, 80.31),\n",
+       "  (32.128, 76.374),\n",
+       "  (31.049, 77.997),\n",
+       "  (30.78, 78.774),\n",
+       "  (30.511999999999997, 79.403),\n",
+       "  (34.203, 73.9),\n",
+       "  (33.061, 75.863)],\n",
+       " 4: [(17.747, 80.775),\n",
+       "  (18.519000000000002, 86.27600000000001),\n",
+       "  (23.083000000000002, 80.041)],\n",
+       " 5: [(17.412, 73.885),\n",
+       "  (17.179000000000002, 73.707),\n",
+       "  (18.066, 76.45100000000001)],\n",
+       " 6: [(27.394000000000002, 88.75200000000001), (27.73, 88.155)],\n",
+       " 7: [(24.281, 93.54799999999999),\n",
+       "  (21.747, 92.99),\n",
+       "  (24.256999999999998, 93.545),\n",
+       "  (24.641, 92.891),\n",
+       "  (24.471999999999998, 92.505),\n",
+       "  (24.015, 93.986),\n",
+       "  (24.894000000000002, 92.25),\n",
+       "  (22.212, 92.70200000000001),\n",
+       "  (21.691999999999997, 92.90799999999999),\n",
+       "  (22.854, 92.306),\n",
+       "  (22.825, 92.34299999999999),\n",
+       "  (23.5081, 93.5148)]}"
       ]
      },
      "execution_count": 17,
@@ -840,6 +729,13 @@
    "source": [
     "q_z"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
