design changes and predictive model first step

--- a/notebooks/implement_meansk.ipynb
+++ b/notebooks/implement_meansk.ipynb
@@ -601,13 +601,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "8\n",
+      "{0: array([ 1, 14, 15, 16, 18, 19, 23, 46, 47, 48, 51, 52, 53, 54, 55, 56, 57,\n",
+      "       58, 59, 60, 61, 62, 63, 64, 65, 66, 69, 70, 71, 72, 73, 74, 75, 76,\n",
+      "       77, 79]), 1: array([ 2,  3, 20, 28, 33, 40]), 2: array([ 0,  4,  5,  7, 10, 11, 12, 13, 17, 25, 26, 29, 30, 31, 32, 34, 36,\n",
+      "       37, 39, 41, 42, 49, 50, 81, 82, 84, 85]), 3: array([43, 44, 45, 67, 68]), 4: array([ 8, 21, 35]), 5: array([ 9, 24, 38]), 6: array([22, 80]), 7: array([ 6, 27, 78, 83])}\n"
      ]
     }
    ],
    "source": [
     "quake_zones = get_data_clusters(dummy_df, 8)\n",
-    "print(len(quake_zones))"
+    "print(len(quake_zones))\n",
+    "print(quake_zones)"
    ]
   },
   {
@@ -634,12 +639,7 @@
     {
      "data": {
       "text/plain": [
-       "{0: [(23.419, 70.232),\n",
-       "  (23.316, 69.98100000000001),\n",
-       "  (23.506999999999998, 70.517),\n",
-       "  (23.776999999999997, 70.899),\n",
-       "  (23.322, 70.477)],\n",
-       " 1: [(12.01, 92.48299999999999),\n",
+       "{0: [(12.01, 92.48299999999999),\n",
        "  (10.686, 92.583),\n",
        "  (11.43, 92.346),\n",
        "  (11.446, 92.35700000000001),\n",
@@ -675,6 +675,12 @@
        "  (10.947000000000001, 91.711),\n",
        "  (10.833, 91.711),\n",
        "  (11.132, 93.471)],\n",
+       " 1: [(29.706, 80.935),\n",
+       "  (28.565, 78.961),\n",
+       "  (30.029, 80.31),\n",
+       "  (31.049, 77.997),\n",
+       "  (30.78, 78.774),\n",
+       "  (30.511999999999997, 79.403)],\n",
        " 2: [(25.011, 94.186),\n",
        "  (27.419, 92.57600000000001),\n",
        "  (26.107, 96.115),\n",
@@ -682,43 +688,39 @@
        "  (25.976999999999997, 95.34),\n",
        "  (26.469, 93.12700000000001),\n",
        "  (25.206, 94.708),\n",
-       "  (25.271, 94.20200000000001),\n",
-       "  (25.149, 95.12700000000001),\n",
-       "  (25.17, 94.652),\n",
-       "  (27.635, 92.37100000000001),\n",
-       "  (24.908, 93.678),\n",
-       "  (25.592, 94.696),\n",
-       "  (25.329, 95.04799999999999),\n",
-       "  (24.8036, 93.6505)],\n",
-       " 3: [(29.706, 80.935),\n",
-       "  (28.565, 78.961),\n",
-       "  (33.617, 75.333),\n",
-       "  (30.029, 80.31),\n",
-       "  (32.128, 76.374),\n",
-       "  (31.049, 77.997),\n",
-       "  (30.78, 78.774),\n",
-       "  (30.511999999999997, 79.403),\n",
-       "  (34.203, 73.9),\n",
-       "  (33.061, 75.863)],\n",
-       " 4: [(17.747, 80.775),\n",
-       "  (18.519000000000002, 86.27600000000001),\n",
-       "  (23.083000000000002, 80.041)],\n",
-       " 5: [(17.412, 73.885),\n",
-       "  (17.179000000000002, 73.707),\n",
-       "  (18.066, 76.45100000000001)],\n",
-       " 6: [(27.394000000000002, 88.75200000000001), (27.73, 88.155)],\n",
-       " 7: [(24.281, 93.54799999999999),\n",
+       "  (24.281, 93.54799999999999),\n",
        "  (21.747, 92.99),\n",
        "  (24.256999999999998, 93.545),\n",
        "  (24.641, 92.891),\n",
+       "  (25.271, 94.20200000000001),\n",
+       "  (25.149, 95.12700000000001),\n",
+       "  (25.17, 94.652),\n",
        "  (24.471999999999998, 92.505),\n",
        "  (24.015, 93.986),\n",
+       "  (27.635, 92.37100000000001),\n",
        "  (24.894000000000002, 92.25),\n",
        "  (22.212, 92.70200000000001),\n",
+       "  (24.908, 93.678),\n",
        "  (21.691999999999997, 92.90799999999999),\n",
        "  (22.854, 92.306),\n",
        "  (22.825, 92.34299999999999),\n",
-       "  (23.5081, 93.5148)]}"
+       "  (25.592, 94.696),\n",
+       "  (25.329, 95.04799999999999),\n",
+       "  (23.5081, 93.5148),\n",
+       "  (24.8036, 93.6505)],\n",
+       " 3: [(23.419, 70.232),\n",
+       "  (23.316, 69.98100000000001),\n",
+       "  (23.506999999999998, 70.517),\n",
+       "  (23.776999999999997, 70.899),\n",
+       "  (23.322, 70.477)],\n",
+       " 4: [(17.412, 73.885),\n",
+       "  (17.179000000000002, 73.707),\n",
+       "  (18.066, 76.45100000000001)],\n",
+       " 5: [(17.747, 80.775),\n",
+       "  (18.519000000000002, 86.27600000000001),\n",
+       "  (23.083000000000002, 80.041)],\n",
+       " 6: [(27.394000000000002, 88.75200000000001), (27.73, 88.155)],\n",
+       " 7: [(33.617, 75.333), (32.128, 76.374), (34.203, 73.9), (33.061, 75.863)]}"
       ]
      },
      "execution_count": 17,
